--- a/Exercise/box.html
+++ b/Exercise/box.html
@@ -14,17 +14,17 @@
     <input type="radio" name="color"  value="blue"> Blue
     <input type="radio" name="color" value="green"> Green
     <ul>
-        <li class="number">1</li>
-        <li class="number">2</li>
-        <li class="number">3</li>
-        <li class="number">4</li>
-        <li class="number">5</li>
-        <li class="number">6</li>
-        <li class="number">7</li>
-        <li class="number">8</li>
-        <li class="number">9</li>
+        <li class="number" onclick="check(this)">1</li>
+        <li class="number" onclick="check(this)">2</li>
+        <li class="number" onclick="check(this)">3</li>
+        <li class="number" onclick="check(this)">4</li>
+        <li class="number" onclick="check(this)">5</li>
+        <li class="number" onclick="check(this)">6</li>
+        <li class="number" onclick="check(this)">7</li>
+        <li class="number" onclick="check(this)">8</li>
+        <li class="number" onclick="check(this)">9</li>
     </ul>
-    <input type="button" value="Reset" class="reset">
+    <input type="button" value="Reset" class="reset" onclick="reset()">
 </div>
 </body>
 </html>
